# student-manager

./: Longid_CS003A_071223_Project1_1.sln  Longid_CS003A_071223_Project1_1.vcxproj  Longid_CS003A_071223_Project1_1.vcxproj.filters  README.md  Source.cpp  html.txt  javascript.txt  student.cpp  student.h
include/: student.h
src/: CMakeLists.txt  main.cpp  student.cpp
